overflow fix

--- a/src/styles/modules/_modal.scss
+++ b/src/styles/modules/_modal.scss
@@ -30,6 +30,7 @@
 
         &__form {
             @include flexGap(1rem);
+            overflow-y: auto;
         }
         
         &__form-title-wrapper {
